# slack-alerts

./: .travis.yml  README.md  pyproject.toml
slack_alerts/: __init__.py  alerter.py  exceptions.py
tests/: test_alerter.py  test_elements.py  test_slack_alerts.py  test_utils.py
